# carbonozero

./: .gitignore  README.md  flake.nix  pyproject.toml
db/: auto_setup.sh  drop.sql  inserts.sql  nbs.csv  ncm.csv  postgresql.conf  queries.sql  schema.sql
db/filters/: contrib_co2.sql  hist_co2.sql  reg_leg.sql  relatorio.sql
scripts/: common.py  gen_inserts.py  gen_inserts_contrib.py  gen_inserts_rel.py
src/carbonozero/: __main__.py  common.py  inst_cient.py  org_adm.py
