[project]
name = "carbonozero"
version = "0.1.0"
description = "Monitoramento de emissões de carbono corporativas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "faker>=40.23.0",
    "grapheme>=0.6.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
]
